--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,11 +40,34 @@
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
 
+
+$scroll_offset : 2em;
+h1:before, .anchor:before { 
+    content: ''; 
+    display: block; 
+    position: relative; 
+    width: 0; 
+    height: $scroll_offset; 
+    margin-top: -$scroll_offset;
+}
+
+.badge {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    position: absolute;
+    margin-top: .5em;
+    margin-left: -.5em;
+    color: white;
+    background-color: #00369f;
+    font-size: .8em;
+}
+
+// paper-box suitable for horizontal graphs
 .paper-box {
     display: flex;
     justify-content: left;
     align-items: center;
-    flex-direction: row;
+    flex-direction: row-reverse;
     flex-wrap: wrap;
     border-bottom: 1px #efefef solid;
     padding: 2em 0 2em 0;
@@ -77,7 +100,7 @@
         
         .paper-box-text{
             justify-content: left;
-            padding-left: 2em;
+            padding-left: 0;
             max-width: 60%;
             order: 2;
         }
@@ -87,23 +110,50 @@
 
 }
 
-$scroll_offset : 2em;
-h1:before, .anchor:before { 
-    content: ''; 
-    display: block; 
-    position: relative; 
-    width: 0; 
-    height: $scroll_offset; 
-    margin-top: -$scroll_offset;
-}
+// the new paper-box for vertical graphs
+.paper-box1 {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    border-bottom: 1px #efefef solid;
+    padding: 2em 0 2em 0;
+    
 
-.badge {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    position: absolute;
-    margin-top: .5em;
-    margin-left: -.5em;
-    color: white;
-    background-color: #00369f;
-    font-size: .8em;
+    .paper-box-image1{
+        justify-content: center;
+        display: flex;
+        width: 100%;
+        order: 2;
+        img {
+            max-width: 400px;
+            box-shadow: 3px 3px 6px #888;
+            object-fit: cover;
+        }
+    }
+    
+    .paper-box-text1{
+        max-width: 100%;
+        order: 1;
+    }
+    
+    @include breakpoint($medium) {
+        .paper-box-image1{
+            justify-content: left;
+            min-width: 200px;
+            max-width: 20%;
+            order: 1;
+        }
+        
+        .paper-box-text1{
+            justify-content: left;
+            padding-left: 0;
+            max-width: 60%;
+            order: 2;
+        }
+
+    }
+
+
 }
