--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,11 @@
 <!-- For all browsers -->
 <link rel="stylesheet" href="assets/css/main.css">
 
+<!-- do not cache -->
+<meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
+
 <meta http-equiv="cleartype" content="on">
 <head>
   <base target="_blank">
