--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -62,7 +62,7 @@ h1:before, .anchor:before {
     font-size: .8em;
 }
 
-// paper-box suitable for horizontal graphs
+// paper-box suitable for horizontal images
 .paper-box {
     display: flex;
     justify-content: left;
@@ -110,7 +110,7 @@ h1:before, .anchor:before {
 
 }
 
-// the new paper-box for vertical graphs
+// the new paper-box for vertical images
 // .paper-box1 {
 //     display: flex;
 //     justify-content: left;
