--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -100,7 +100,7 @@ h1:before, .anchor:before {
         
         .paper-box-text{
             justify-content: left;
-            padding-left: 0;
+            padding-right: 1em;
             max-width: 60%;
             order: 2;
         }
@@ -109,51 +109,3 @@ h1:before, .anchor:before {
 
 
 }
-
-// the new paper-box for vertical images
-// .paper-box1 {
-//     display: flex;
-//     justify-content: left;
-//     align-items: center;
-//     flex-direction: row-reverse;
-//     flex-wrap: wrap;
-//     border-bottom: 1px #efefef solid;
-//     padding: 2em 0 2em 0;
-    
-
-//     .paper-box-image1{
-//         justify-content: center;
-//         display: flex;
-//         width: 100%;
-//         order: 2;
-//         img {
-//             max-width: 400px;
-//             box-shadow: 3px 3px 6px #888;
-//             object-fit: cover;
-//         }
-//     }
-    
-//     .paper-box-text1{
-//         max-width: 100%;
-//         order: 1;
-//     }
-    
-//     @include breakpoint($medium) {
-//         .paper-box-image1{
-//             justify-content: left;
-//             min-width: 200px;
-//             max-width: 20%;
-//             order: 1;
-//         }
-        
-//         .paper-box-text1{
-//             justify-content: left;
-//             padding-left: 0;
-//             max-width: 60%;
-//             order: 2;
-//         }
-
-//     }
-
-
-// }
