--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -116,7 +116,7 @@ h1:before, .anchor:before {
     flex-direction: row-reverse;
     flex-wrap: wrap;
     border-bottom: 1px #efefef solid;
-    padding: 0.5em 0 0 0;
+    padding: 1em 0 0.5em 0;
     
     .paper-box-text{
         max-width: 100%;
